# odrscenariomaker

./: .gitignore  .gitmodules  CMakeLists.txt  License.txt  README.md  Version.h  altran.py  altran_lidar_sync.py  altran_sync.py  patch.txt
carla2osi/: BasepolyExtractor.h  CMakeLists.txt  ObjLoader.h  Osiexporter.cpp  Osiexporter.h  Viewer.cpp  Viewer.h  carla2osi.cpp  osm2odr.cpp
odr_carla_map/: README.md  map.osm  osm-to-xodr.py
ppp_lanes/: CMakeLists.txt  FolderReader.h  bbox.h  kdTree.h  laneaggregator.h  main.cpp  markingdetector.h  pathfinder.h  pathmerger.h  point.h  quantizer.h
ppp_simulation/: altran_sync.py  ppp_sim_config.py  ppp_sim_spawn.py  ppp_sim_start.cpp  ppp_sim_start.py  ppps_sim_start.py
ppp_simulation/ODR2Poly/: CMakeLists.txt  CanvasXODR.cpp  CanvasXODR.h  Town10_lanes.txt  Viewer.cpp  Viewer.h  main.cpp
ppp_simulation/ODRScenarioMaker/: Actor.cpp  Actor.h  ActorProps.cpp  ActorProps.h  CMakeLists.txt  Camera.cpp  Camera.h  CameraProps.cpp  CameraProps.h  Canvas.cpp  Canvas.h  CanvasXODR.cpp  CanvasXODR.h  IPC.cpp  LDoubleSpinBox.cpp  LDoubleSpinBox.h  MainWindow.cpp  MainWindow.h  ScenarioProps.cpp  ScenarioProps.h  Selectable.cpp  Selectable.h  Serializer.cpp  Serializer.h  Vehicle.cpp  Vehicle.h  Viewer.cpp  Viewer.h  Walker.cpp  Waypath.cpp  Waypath.h  WaypathProps.cpp  WaypathProps.h  Waypoint.cpp  Waypoint.h  WaypointProps.cpp  WaypointProps.h  World3D.cpp  World3D.h  carlaClient.cpp  (+10 more)
ppp_simulation/ODRScenarioMaker/client/: CMakeLists.txt  play.cpp
ppp_simulation/ODRViewer/: CMakeLists.txt  CanvasXODR.cpp  CanvasXODR.h  Viewer.cpp  Viewer.h  main.cpp
ppp_simulation/cpp/: CMakeLists.txt  PPPScene.cpp  PPPScene.h  configuration.yaml  originalExample.cpp  pactor.h  ppp_sim_start.cpp  ptrafficmanager.cpp  ptrafficmanager.h  pvehicle.cpp  pwalker.cpp  test.cpp  test_alt_turns.cpp  test_left_turns.cpp
ppp_simulation/cpp/carla2osi/: CMakeLists.txt  ObjLoader.h  Osiexporter.cpp  Osiexporter.h  Viewer.cpp  Viewer.h  carla2osi.cpp  carla2osi_config.yaml  config.yaml  static2osi.cpp
ppp_simulation/cpp/carla2osi/modules/: FindQGLViewer.cmake
ppp_simulation/cpp/carla2osi/utils/: osi2txt.cpp  txt2osi.cpp
ppp_simulation/cpp/scenarios/: pactor.h  pvehicle.cpp  pwalker.cpp  scenario.yaml  scenario_01.cpp  test_alt_turns.cpp
ppp_simulation/cpp/tests/: test_alt_turns.cpp  test_left_turns.cpp  test_osi.cpp  test_spawn.cpp  test_walker.cpp
ppp_simulation/maps_coords/Town01/: spawn_points.ply  waypoints1.ply  waypoints2.ply
ppp_simulation/maps_coords/Town02/: spawn_points.ply  waypoints1.ply  waypoints2.ply
ppp_simulation/maps_coords/Town03/: spawn_points.ply  waypoints1.ply  waypoints2.ply
ppp_simulation/maps_coords/Town04/: spawn_points.ply  waypoints1.ply  waypoints2.ply
ppp_simulation/maps_coords/Town05/: spawn_points.ply  waypoints1.ply  waypoints2.ply
ppp_simulation/modified_examples/: altran_async.py  altran_lidar_sync.py
ppp_simulation/python/: ppp_sim_start.py
src/: Actor.cpp  Actor.h  ActorProps.cpp  ActorProps.h  CMakeLists.txt  Camera.cpp  Camera.h  CameraProps.cpp  CameraProps.h  CanvasXODR.cpp  CanvasXODR.h  IPC.cpp  IPC.h  LDoubleSpinBox.cpp  MainWindow.cpp  MainWindow.h  ScenarioProps.cpp  ScenarioProps.h  Selectable.cpp  Selectable.h  Serializer.cpp  Serializer.h  Vehicle.cpp  Vehicle.h  Viewer.cpp  Viewer.h  Walker.cpp  Walker.h  Waypath.cpp  Waypath.h  WaypathProps.cpp  WaypathProps.h  Waypoint.cpp  Waypoint.h  WaypointProps.cpp  WaypointProps.h  World3D.h  carlaClient.cpp  globals.h  main.cpp  (+4 more)
src/clients/: CarlaClient.cpp  Client.h
src/exporters/xosc/: components.h
